# leviathan-game-engine

./: .gitmodules  CMakeLists.txt  NOTES.txt  README.MD  README.md  build.sh  build_debug.sh  full_remake.sh  main.cpp  make.sh  point.cpp  run.sh
Engine/: CMakeLists.txt
Engine/core/include/: AssetManager.h  AssetTypes.h  CameraData.h  CubemapConverter.h  Engine.h  Game.h  GameObject.h  LightData.h  Material.h  Mesh.h  Model.h  PathUtils.h  RenderBindings.h  Shader.h  ShaderLoader.h  Shapes.h  Texture.h  TextureLoader.h
Engine/core/include/Components/: AllComponents.h  Camera.h  Component.h  LightSource.h  Renderer.h  Transform.h
Engine/core/include/Components/lights/: AllLights.h  AreaLight.h  DirectionalLight.h  PointLight.h  SpotLight.h
Engine/core/include/Input/: KeyboardHandler.h  MouseHandler.h
Engine/core/include/Objects/: AllObjects.h  ContainerObject.h  LightCubes.h  PlayerCamera.h
Engine/core/include/RenderEffects/: AllRenderEffects.h  BasicEffect.h  OutlineEffect.h  RenderEffect.h
Engine/core/src/: AssetManager.cpp  Camera.cpp  CubemapConverter.cpp  DeltaClock.cpp  Game.cpp  GameObject.cpp  KeyboardHandler.cpp  Mesh.cpp  Model.cpp  MouseHandler.cpp  Renderer.cpp  Shader.cpp  ShaderLoader.cpp  Shapes.cpp  Texture.cpp  TextureLoader.cpp  Transform.cpp
Engine/include/: Engine.h  Game.h  GameObject.h  LightData.h  Model.h  Shapes.h  Texture.h
Engine/include/Components/: Component.h  Components.h  Flashlight.h  LightSource.h  Transform.h
Engine/include/Components/Lights/: AreaLight.h  DirectionalLight.h  LightData.h  Lights.h  PointLight.h  SpotLight.h
Engine/include/Input/: Input.h
Engine/include/Objects/: Objects.h
Engine/resources/: reflect.frag  reflect.vert
Engine/resources/objects/cake/: Cake.mtl
Engine/resources/shaders/: blurScreen.frag  camera.vert  default.vert  defaultScreen.frag  directional.frag  explode.geom  flat.frag  flat.vert  light.frag  lights.frag  lights.vert  point.frag  reflect.frag  reflect.vert  screen.frag  screen.vert  singleColor.frag  singleColor.vert  skybox.frag  skybox.vert  test.frag  test.vert
Engine/resources/shaders/default/: default.frag  default.vert
Engine/resources/shaders/equirectToCube/: equirectToCube.frag  equirectToCube.vert
Engine/resources/shaders/explode/: explode.frag  explode.geom  explode.vert
Engine/resources/shaders/flat/: flat.frag  flat.vert
Engine/resources/shaders/normal/: normal.frag  normal.geom  normal.vert
Engine/resources/shaders/phong/: phong.frag  phong.vert
Engine/resources/shaders/postprocess/: blurScreen.frag  defaultScreen.frag  screen.vert
Engine/resources/shaders/reflect/: reflect.frag  reflect.vert
Engine/resources/shaders/singleColor/: singleColor.vert
Engine/resources/shaders/skybox/: skybox.frag  skybox.vert
Engine/resources/shaders/specific_light_shaders/: spot.frag
Engine/src/: Game.cpp  GameObject.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Transform.cpp
behaviors/: Flashlight.h  LightBehavior.h
deprecated/: directional.cpp  spot.cpp
games/: equi.cpp  mult.cpp  object.cpp  test.cpp
games/samples/: sample.cpp
games/test/: object.cppp  test.cpp
include/: Camera.h  Cube.h  DeltaClock.h  Game.h  GameObject.h  KeyboardHandler.h  Model.h  ObjectCube.h  Shader.h
manual/: README.md
resources/shaders/: default.frag  default.vert  directional.vert  light.frag  light.vert  lights.frag  lights.vert
shaders/: default.frag
src/: .main.cpp.swp  Camera.cpp  Cube.cpp  Game.cpp  GameObject.cpp  KeyboardHandler.cpp  Model.cpp  Model.h  MouseHandler.cpp  Shader.cpp  Shader.h  Shapes.cpp  Texture.cpp  glad.c  main.cpp  main.cppp  new_main.cpp
